[gd_scene load_steps=20 format=3 uid="uid://c6hiw5u4sabnq"]

[ext_resource type="Script" path="res://Character/Character.gd" id="1_quucf"]
[ext_resource type="PackedScene" uid="uid://bodc075rsmy1u" path="res://Assets/Character/CubeMan.gltf" id="2_wgcur"]
[ext_resource type="Script" path="res://Character/StateManager.gd" id="3_8lvmm"]
[ext_resource type="Script" path="res://Character/CharacterState/CharacterStateDefault.gd" id="3_uaqpb"]
[ext_resource type="Script" path="res://Components/PeriodicShifter.gd" id="4_52b7g"]
[ext_resource type="Script" path="res://Components/HeadTilter.gd" id="5_iyia5"]
[ext_resource type="Script" path="res://Character/CharacterState/CharacterStateInAir.gd" id="6_rd644"]
[ext_resource type="Script" path="res://Character/CharacterState/CharacterStateSlide.gd" id="7_8cxhk"]
[ext_resource type="Script" path="res://Character/CharacterState/CharacterStateSprint.gd" id="8_h88db"]
[ext_resource type="Script" path="res://Character/CharacterState/CharacterStateWallSlide.gd" id="9_3gd60"]
[ext_resource type="Script" path="res://Character/CharacterController.gd" id="10_bgsp5"]
[ext_resource type="Script" path="res://Character/CharacterNeck.gd" id="11_lvk64"]
[ext_resource type="Script" path="res://Character/CharacterState/CharacterStateCrawl.gd" id="11_owv1b"]
[ext_resource type="Script" path="res://Components/PhysicsInterpolator.gd" id="12_lcx1h"]
[ext_resource type="Script" path="res://Character/CharacterCamera.gd" id="13_s2a8a"]
[ext_resource type="PackedScene" uid="uid://7vopme4epo8g" path="res://Character/DebugHUD.tscn" id="14_wid2k"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xgkbj"]
radius = 0.25
height = 1.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2vjg"]
radius = 0.25
height = 0.75

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yyvhw"]
radius = 0.23
height = 1.05

[node name="PlayerCharacter" type="CharacterBody3D" node_paths=PackedStringArray("StateDefault", "Controller")]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_quucf")
StateDefault = NodePath("StateManager/CharacterStateDefault")
Controller = NodePath("PlayerController")

[node name="CubeMan" parent="." instance=ExtResource("2_wgcur")]
visible = false

[node name="DefaultCapsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_xgkbj")

[node name="CrouchCapsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
shape = SubResource("CapsuleShape3D_g2vjg")

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("character", "defaultState", "inAirState", "slideState", "sprintState", "wallSlideState", "crawlState")]
script = ExtResource("3_8lvmm")
character = NodePath("..")
defaultState = NodePath("CharacterStateDefault")
inAirState = NodePath("CharacterStateInAir")
slideState = NodePath("CharacterStateSlide")
sprintState = NodePath("CharacterStateSprint")
wallSlideState = NodePath("CharacterStateWallSlide")
crawlState = NodePath("CharacterStateCrawl")

[node name="CharacterStateDefault" type="Node" parent="StateManager" node_paths=PackedStringArray("headBob", "headTilt", "character", "manager")]
script = ExtResource("3_uaqpb")
headBob = NodePath("../../Head/HeadBob")
headTilt = NodePath("../../HeadTilter")
character = NodePath("../..")
manager = NodePath("..")

[node name="CharacterStateInAir" type="Node" parent="StateManager" node_paths=PackedStringArray("headTilt", "rayCastLeft", "rayCastRight", "character", "manager")]
script = ExtResource("6_rd644")
headTilt = NodePath("../../HeadTilter")
rayCastLeft = NodePath("../../WallSlideRayCastLeft")
rayCastRight = NodePath("../../WallSlideRayCastRight")
wallSlideAngleLimit = 20.0
acceleration = 1800.0
maxSpeed = 4.0
friction = 0.0
character = NodePath("../..")
manager = NodePath("..")

[node name="CharacterStateSlide" type="Node" parent="StateManager" node_paths=PackedStringArray("neck", "rayCast", "headTilt", "defaultCapsule", "crouchCapsule", "defaultCharacterArea", "character", "manager")]
script = ExtResource("7_8cxhk")
neck = NodePath("../../Head/CharacterNeck")
rayCast = NodePath("../../SlideRayCast")
headTilt = NodePath("../../HeadTilter")
defaultCapsule = NodePath("../../DefaultCapsule")
crouchCapsule = NodePath("../../CrouchCapsule")
defaultCharacterArea = NodePath("../../DefaultCharacterArea")
slideTurnWeight = 2.5
slideStopDuration = 0.1
slideStopSpeed = 2.5
acceleration = 0.0
maxSpeed = 5.0
maxSpeedEnforcement = 2.0
friction = 150.0
character = NodePath("../..")
manager = NodePath("..")

[node name="CharacterStateSprint" type="Node" parent="StateManager" node_paths=PackedStringArray("camera", "headBob", "headTilt", "character", "manager")]
script = ExtResource("8_h88db")
camera = NodePath("../../PhysicsInterpolator/Camera3D")
headBob = NodePath("../../Head/HeadBob")
headTilt = NodePath("../../HeadTilter")
sprintFovMult = 1.15
acceleration = 2800.0
maxSpeed = 3.0
character = NodePath("../..")
manager = NodePath("..")

[node name="CharacterStateWallSlide" type="Node" parent="StateManager" node_paths=PackedStringArray("headTilt", "rayCastLeft", "rayCastRight", "character", "manager")]
script = ExtResource("9_3gd60")
headTilt = NodePath("HeadTiltWallSlide")
rayCastLeft = NodePath("../../WallSlideRayCastLeft")
rayCastRight = NodePath("../../WallSlideRayCastRight")
acceleration = 2800.0
maxSpeed = 5.0
friction = 100.0
jumpVelocity = 10.0
character = NodePath("../..")
manager = NodePath("..")

[node name="HeadTiltWallSlide" type="Node" parent="StateManager/CharacterStateWallSlide" node_paths=PackedStringArray("Target")]
script = ExtResource("5_iyia5")
Target = NodePath("../../../Head")
maxAngle = 5.0

[node name="CharacterStateCrawl" type="Node" parent="StateManager" node_paths=PackedStringArray("defaultCharacterArea", "defaultCapsule", "crouchCapsule", "neck", "headBob", "character", "manager")]
script = ExtResource("11_owv1b")
defaultCharacterArea = NodePath("../../DefaultCharacterArea")
defaultCapsule = NodePath("../../DefaultCapsule")
crouchCapsule = NodePath("../../CrouchCapsule")
neck = NodePath("../../Head/CharacterNeck")
headBob = NodePath("../../Head/HeadBob")
acceleration = 1200.0
maxSpeed = 1.5
character = NodePath("../..")
manager = NodePath("..")

[node name="PlayerController" type="Node" parent="." node_paths=PackedStringArray("character", "neck")]
script = ExtResource("10_bgsp5")
character = NodePath("..")
neck = NodePath("../Head/CharacterNeck")

[node name="Head" type="Node3D" parent="."]

[node name="HeadBob" type="Node" parent="Head" node_paths=PackedStringArray("Target")]
script = ExtResource("4_52b7g")
Target = NodePath("..")
moveX = true
amplitudeX = 0.05
frequencyX = 6.0
offsetX = 4.712
moveY = true
amplitudeY = 0.05
frequencyY = 12.0

[node name="CharacterNeck" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.969877, 0)
script = ExtResource("11_lvk64")

[node name="CameraTarget" type="Node3D" parent="Head/CharacterNeck"]

[node name="PhysicsInterpolator" type="Node3D" parent="." node_paths=PackedStringArray("Target")]
script = ExtResource("12_lcx1h")
Target = NodePath("../Head/CharacterNeck/CameraTarget")

[node name="Camera3D" type="Camera3D" parent="PhysicsInterpolator"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
current = true
fov = 90.0
script = ExtResource("13_s2a8a")

[node name="SpotLight3D" type="SpotLight3D" parent="PhysicsInterpolator/Camera3D"]
transform = Transform3D(-1, -7.64274e-15, -8.74228e-08, 0, -1, 8.74228e-08, -8.74228e-08, 8.74228e-08, 1, 0.166, 0, -0.383)
visible = false
light_color = Color(1, 0.996078, 0.698039, 1)
shadow_enabled = true
spot_range = 13.1957
spot_angle = 30.1382

[node name="DebugHUD" parent="." instance=ExtResource("14_wid2k")]

[node name="SlideRayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.3, 0)

[node name="WallSlideRayCastLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
target_position = Vector3(0.45, 0, 0)

[node name="WallSlideRayCastRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
target_position = Vector3(-0.45, 0, 0)

[node name="HeadTilter" type="Node" parent="." node_paths=PackedStringArray("Target")]
script = ExtResource("5_iyia5")
Target = NodePath("../Head")

[node name="DefaultCharacterArea" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="DefaultCharacterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_yyvhw")
